<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:paddingBottom="0dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="0dp"
    tools:context="co.edu.udea.compumovil.gr07_20171.labfcm.Login">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="50dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:background="@drawable/login" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="User"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/button"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:onClick="signInLogin"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    style="@style/Base.Widget.AppCompat.Button.Colored" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:id="@+id/button2"
                    android:onClick="register"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    style="@style/Base.Widget.AppCompat.Button.Colored" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    tools:visibility="gone" />
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
